# SortFilterProxyModelQt6

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  SortFilterProxyModelConfig.cmake.in  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
.github/workflows/: cmake-qt6.yml
docs/: qml-sortfilterproxymodel-expressionfilter.html  qml-sortfilterproxymodel-expressionrole.html  qml-sortfilterproxymodel-expressionsorter.html  qml-sortfilterproxymodel-sortfilterproxymodel.html  sortfilterproxymodel.qdocconf
filters/: expressionfilter.cpp  rangefilter.cpp  regexpfilter.cpp
proxyroles/: expressionrole.cpp  filterrole.cpp  switchrole.cpp
sorters/: expressionsorter.cpp  filtersorter.cpp  rolesorter.cpp  stringsorter.cpp
tests/: CMakeLists.txt  tst_rolesorter.qml  tst_stringsorter.qml
